--- a/assets/global.css
+++ b/assets/global.css
@@ -33,6 +33,11 @@ body {
 	color:#fff;
 }
 
+
+.hide {
+	display: none;
+}
+
 /* Desktops */
 @media only screen and (min-width: 600px){
 	.mobileOnly {
